fix(style): horizontal scroll & track box id: 2635

--- a/projects/wm-core/src/box/horizontal-scroll-box/horizontal-scroll-box.component.scss
+++ b/projects/wm-core/src/box/horizontal-scroll-box/horizontal-scroll-box.component.scss
@@ -1,5 +1,6 @@
 wm-horizontal-scroll-box {
   .wm-items-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     margin: 0;
@@ -7,7 +8,6 @@ wm-horizontal-scroll-box {
     .wm-item-arrow {
       background: white;
       position: absolute;
-      top: 50;
       border-radius: 100%;
       box-shadow: 5px 5px 5px #0000000e;
       cursor: pointer;
@@ -18,7 +18,6 @@ wm-horizontal-scroll-box {
       text-decoration: none;
       display: inline-block;
       border-radius: 30px;
-      position: absolute;
       padding: 0px;
       width: 30px;
       height: 30px;
